--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -45,3 +45,19 @@
 </html>
 <script src="~/Content/Multi-Select/chosen.jquery.js" type="text/javascript"></script>
 <script src="~/Content/Multi-Select/docsupport/init.js"></script>
+
+<script>
+    $(document).ajaxComplete(function () {
+        var config = {
+            '.chosen-select': {},
+            '.chosen-select-deselect': { allow_single_deselect: true },
+            '.chosen-select-no-single': { disable_search_threshold: 10 },
+            '.chosen-select-no-results': { no_results_text: 'Oops, nothing found!' },
+            '.chosen-select-rtl': { rtl: true },
+            '.chosen-select-width': { width: '95%' }
+        }
+        for (var selector in config) {
+            $(selector).chosen(config[selector]);
+        }
+    });    
+</script>
