--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -2,6 +2,7 @@
 
 <form id="frmMasterCampaign">
     @Html.HiddenFor(m => m.Id, new { @Value = Model.Id })
+    @Html.HiddenFor(m => m.Status, new { @Value = Model.Status })
     <section class="content-header"></section>
     <section class="content">
         <!-- SELECT2 EXAMPLE -->
@@ -44,9 +45,10 @@
                             <div class="form-group">
                                 <label>Theme</label>  <br />
                                 @Html.ListBoxFor(m => m.Themes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name", Model.Themes_Id), (Model.Id != 0 && Model.Status == "Complete") ?
-                                            (object)new { disabled = "disabled", @class = "chosen-single form-control" } :
-                                            (object)new { @class = "chosen-single form-control" }
-)
+                                            (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
+                                            (object)new { @class = "chosen-select form-control" }) <a data-next-stage="select" data-target-id="Themes_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>
+
+
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -54,8 +56,9 @@
                                 <label>Geography</label><span class="text-danger">*</span><br />
                                 @Html.ListBoxFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name", Model.Geographys_Id), (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
-                                            (object)new { @class = "chosen-select form-control" }
-)
+                                            (object)new { @class = "chosen-select form-control" }) <a data-next-stage="select" data-target-id="Geographys_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>
+
+
                                 <div class="validmsgbusinesGeography"></div>
                             </div>
                         </div>
@@ -67,20 +70,20 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Business Group<span class="text-danger">*</span></label><br />
-                                @Html.ListBoxFor(m => m.BusinessGroups_Id, new MultiSelectList(Model.BusinessGroupViewModels, "Id", "Name", Model.BusinessGroups_Id),
-(Model.Id != 0 && Model.Status == "Complete") ?
-                                            (object)new { disabled = "disabled", @class = "chosen-select form-control", onchange = "this.form.submit(this.val)" } :
-                                            (object)new { @class = "chosen-select form-control" })
+                                @Html.ListBoxFor(m => m.BusinessGroups_Id, new MultiSelectList(Model.BusinessGroupViewModels, "Id", "Name", Model.BusinessGroups_Id),(Model.Id != 0 && Model.Status == "Complete") ?
+                                            (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
+                                    (object)new { @class = "chosen-select form-control" }) 
+                                @*<a data-next-stage="select" data-target-id="BusinessGroups_Id" data-trigger-ev="change" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
                                 <div class="validmsgbusinesGp"></div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Segment<span class="text-danger">*</span></label><br />
-                                @Html.ListBoxFor(m => m.Segments_Id, new MultiSelectList(Model.SegmentViewModels, "Id", "Name", Model.Segments_Id),
-(Model.Id != 0 && Model.Status == "Complete") ?
-                                            (object)new { disabled = "disabled", @class = "chosen-select form-control", onchange = "this.form.submit(this.val)" } :
-                                            (object)new { @class = "chosen-select form-control" })
+                                @Html.ListBoxFor(m => m.Segments_Id, new MultiSelectList(Model.SegmentViewModels, "Id", "Name", Model.Segments_Id),(Model.Id != 0 && Model.Status == "Complete") ?
+                                            (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
+                                    (object)new { @class = "chosen-select form-control" }) 
+                                @*<a data-next-stage="select" data-trigger-ev="change"  data-target-id="Segments_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
                                 <div class="validmsgbusinesSegment"></div>
                             </div>
                         </div>
@@ -92,10 +95,9 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Business Line<span class="text-danger">*</span></label><br />
-                                @Html.ListBoxFor(m => m.BusinessLines_Id, new MultiSelectList(Model.BusinessLineViewModels, "Id", "Name", Model.BusinessLines_Id),
-(Model.Id != 0 && Model.Status == "Complete") ?
+                                @Html.ListBoxFor(m => m.BusinessLines_Id, new MultiSelectList(Model.BusinessLineViewModels, "Id", "Name", Model.BusinessLines_Id),(Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
-                                            (object)new { @class = "chosen-select form-control" })
+                                            (object)new { @class = "chosen-select form-control" }) <a data-next-stage="select" data-target-id="BusinessLines_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>
                                 <div class="validmsgbusinesLine"></div>
                             </div>
                         </div>
@@ -106,7 +108,7 @@
                                 <label>Industry<span class="text-danger">*</span></label><br />
                                 @Html.ListBoxFor(m => m.Industries_Id, new MultiSelectList(Model.IndustryViewModels, "Id", "Name", Model.Industries_Id), (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
-                                            (object)new { @class = "chosen-select form-control" })
+                                            (object)new { @class = "chosen-select form-control" }) <a data-next-stage="select" data-target-id="Industries_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>
                                 <div class="validmsgbusinesIndustry"></div>
                             </div>
                         </div>
@@ -169,11 +171,14 @@
                     </div>
                     <div class="col-md-6"></div>
                     <div class="col-md-4">
+                        @if (Model.Status != "Complete")
+                        {
+                        <div class="col-md-4">
+                            <button Id="btnSubmit" name="button" value="@(Model.Id == 0 ? "Submit" : "Update")" class="btn btn-block btn-primary btn-sm" onclick="return ValidateForm()">@(Model.Id == 0 ? "Submit" : "Update")</button>
+                        </div>
+                        }
                         @if (Model.Id != 0 && Model.Status == "Save Draft")
                         {
-                            <div class="col-md-4">
-                                <button Id="btnSubmit" name="button" value="@(Model.Id == 0 ? "Submit" : "Update")" class="btn btn-block btn-primary btn-sm" onclick="return ValidateForm()">@(Model.Id == 0 ? "Submit" : "Update")</button>
-                            </div>
                             <div class="col-md-4">
                                 <input type="button" Id="btnSaveDraft" name="button" value="Save Draft" class="btn btn-block btn-primary btn-sm"/>
                             </div>
