--- a/MRM/Views/MasterCampaign/MasterCampaign.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaign.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "MasterCampaign";
 
 }
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+
 <style>
     #mydiv {
         position: absolute;
@@ -46,8 +46,7 @@
         @Html.Partial("MasterCampaignForm", Model);
 </div>
 
-<link href="~/Content/datepicker3.css" rel="stylesheet" />
-<script src="~/Content/bootstrap-datepicker.js"></script>
+
 
 <style>
     fieldset {
@@ -68,23 +67,26 @@
 </style>
 
 <script>
-    $(document).ready(function () {
+    $(document).ready(function() {
 
         if ($('#Status').val() == "Complete") {
             $('a[data-select-all="selectunselect"]').hide();
         }
 
-        
 
-        $(document).on('click', '#btnSubmit', function () {
-            $.ajax({
-                type: "POST",
-                url: '/MasterCampaign/save?button=' + "Submit",
-                data: $("#frmMasterCampaign").serialize(), // serializes the form's elements.
-                success: function (data) {
-                    if (data == "True") window.location = "/MasterList/MasterList";
+        $(document).on('click',
+            '#btnSubmit',
+            function() {
+                if (ValidateForm() === true) {
+                    $.ajax({
+                        type: "POST",
+                        url: '/MasterCampaign/save?button=' + "Submit",
+                        data: $("#frmMasterCampaign").serialize(), // serializes the form's elements.
+                        success: function (data) {
+                            if (data === "True") window.location = "/MasterList/MasterList";
+                        }
+                    });
                 }
-            });
         });
         $(document).on('click', '#btnSaveDraft', function () {
             $.ajax({
@@ -92,7 +94,7 @@
                 url: '/MasterCampaign/save?button=' + "Save Draft",                
                 data: $("#frmMasterCampaign").serialize(), // serializes the form's elements.
                 success: function (data) {
-                    if (data == "True") window.location = "/MasterList/MasterList";
+                    if (data === "True") window.location = "/MasterList/MasterList";
                 }
             });
         });
@@ -100,9 +102,9 @@
         $(document).on('click', '#btnDelete', function () {
             $.ajax({
                 type: "POST",
-                url: '/MasterCampaign/Delete?masterId=' + $('#Id').val(),
+                url: '/MasterCampaign/Delete?masterId=' + $('#Id').val() + '&_=' + (new Date()).getTime(),
                 success: function (data) {
-                    if (data == "True") window.location = "/MasterList/MasterList";
+                    if (data === "True") window.location = "/MasterList/MasterList";
                     
                 }
             });
@@ -110,8 +112,7 @@
 
 
 
-        $(document).on('click',
-            'a[data-select-all="selectunselect"]', function() {
+        $(document).on('click', 'a[data-select-all="selectunselect"]', function() {
                 var selectallElement = $(this).attr('data-target-id');
                 var nextStage = $(this).attr('data-next-stage');
 
@@ -126,11 +127,6 @@
                     $(this).text("Select All");
                 }
 
-                //var isTriggerEvent = $(this).attr('data-trigger-ev');
-                //if (isTriggerEvent === "change") {
-                //    $('#' + selectallElement).trigger("change");
-                //}
-
                 $('#' + selectallElement).trigger('chosen:updated');
             });
 
@@ -141,7 +137,7 @@
             $.ajax({
                 type: "POST",
                 url: '/MasterCampaign/LoadBusinessLine',
-                data: $("#frmMasterCampaign").serialize(), // serializes the form's elements.
+                data: $("#frmMasterCampaign").serialize(),
                 success: function(data)
                 {
                     $("#dvFormMasterCampaign").html(data);
@@ -152,7 +148,7 @@
             $.ajax({
                 type: "POST",
                 url: '/MasterCampaign/LoadIndustry',
-                data: $("#frmMasterCampaign").serialize(), // serializes the form's elements.
+                data: $("#frmMasterCampaign").serialize(),
                 success: function(data)
                 {
                     $("#dvFormMasterCampaign").html(data);
@@ -310,25 +306,17 @@
         {
             $('.validmsgMasterDesc').hide();
         }
-        if ($('#Status').val() == "") {
-            $('.validmsgstatus').text("Please select Status").css("color", "#b94a48");
-            $('.validmsgstatus').show();
-            flag = false;
+        //if ($('#Status').val() == "") {
+        //    $('.validmsgstatus').text("Please select Status").css("color", "#b94a48");
+        //    $('.validmsgstatus').show();
+        //    flag = false;
 
-        }
-        else {
+        //}
+        //else {
 
-            $('.validmsgstatus').hide();
-        }
-        if (flag == false)
-        {
-            return false;;
-        }
-        else
-        {
-
-            true;
-        }
+        //    $('.validmsgstatus').hide();
+        //}
+        return flag;
     }
 
 
