--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -174,7 +174,7 @@
                         @if (Model.Status != "Complete")
                         {
                             <div class="col-md-4">                                
-                                <input type="button" Id="btnSubmit" name="button" value="@(Model.Id == 0 ? "Submit" : "Update")" class="btn btn-block btn-primary btn-sm" @(Model.Id == 0 ? "Submit" : "Update") onclick="return ValidateForm()"/>
+                                <input type="button" Id="btnSubmit" name="button" value="Submit" class="btn btn-block btn-primary btn-sm" />
                             </div>
                             <div class="col-md-4">
                                 <input type="button" Id="btnSaveDraft" name="button" value="Save Draft" class="btn btn-block btn-primary btn-sm"/>
