--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - MRM Campaign</title>
     <script src="~/Scripts/jquery-2.1.3.min.js"></script>
-
+    <link href="~/Content/datepicker3.css" rel="stylesheet" />
+    <script src="~/Content/bootstrap-datepicker.js"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @*@Scripts.Render("~/bundles/jquery")*@
