--- a/MRM/Views/MasterCampaign/MasterCampaign.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaign.cshtml
@@ -5,319 +5,9 @@
 
 }
 
-<style>
-    #mydiv {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 1000;
-        background-color: grey;
-        opacity: .8;
-    }
-    .loader {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        margin-left: -32px; /* -1 * image width / 2 */
-        margin-top: -32px; /* -1 * image height / 2 */
-        display: block;
-        border-radius: 50%;
-        animation: spin 2s linear infinite;
-        border: 16px solid #f3f3f3; /* Light grey */
-        border-top: 16px solid #3498db; /* Blue */
-        width: 120px;
-        height: 120px;
-    }
-
-    @@keyframes spin {
-        0% {
-            transform: rotate(0deg);
-        }
-
-        100% {
-            transform: rotate(360deg);
-        }
-    }
-</style>
+<script src="~/Scripts/MasterScript.js"></script>
 
 <div id="dvFormMasterCampaign">
         @Html.Partial("MasterCampaignForm", Model);
 </div>
 
-
-
-<style>
-    fieldset {
-        border: 1px solid #DDD;
-        padding: 0 1.4em 1.4em 1.4em;
-        margin: 25px 0 1.5em 0;
-    }
-
-
-    .datealign {
-        padding-left: 0px !important;
-    }
-
-    legend {
-        font-size: 1.2em;
-        font-weight: bold;
-    }
-</style>
-
-<script>
-    $(document).ready(function() {
-
-        if ($('#Status').val() == "Complete") {
-            $('a[data-select-all="selectunselect"]').hide();
-        }
-
-
-        $(document).on('click',
-            '#btnSubmit',
-            function() {
-                if (ValidateForm() === true) {
-                    $.ajax({
-                        type: "POST",
-                        url: '/MasterCampaign/save?button=' + "Submit",
-                        data: $("#frmMasterCampaign").serialize(), // serializes the form's elements.
-                        success: function (data) {
-                            if (data === "True") window.location = "/MasterList/MasterList";
-                        }
-                    });
-                }
-        });
-        $(document).on('click', '#btnSaveDraft', function () {
-            $.ajax({
-                type: "POST",
-                url: '/MasterCampaign/save?button=' + "Save Draft",                
-                data: $("#frmMasterCampaign").serialize(), // serializes the form's elements.
-                success: function (data) {
-                    if (data === "True") window.location = "/MasterList/MasterList";
-                }
-            });
-        });
-
-        $(document).on('click', '#btnDelete', function () {
-            $.ajax({
-                type: "POST",
-                url: '/MasterCampaign/Delete?masterId=' + $('#Id').val() + '&_=' + (new Date()).getTime(),
-                success: function (data) {
-                    if (data === "True") window.location = "/MasterList/MasterList";
-                    
-                }
-            });
-        });
-
-
-
-        $(document).on('click', 'a[data-select-all="selectunselect"]', function() {
-                var selectallElement = $(this).attr('data-target-id');
-                var nextStage = $(this).attr('data-next-stage');
-
-                if (nextStage === "select") {
-                    $('#' + selectallElement + ' option').prop('selected', true);
-                    $(this).attr('data-next-stage', "unselect");
-                    $(this).text("Select None");
-
-                } else {
-                    $('#' + selectallElement + ' option').prop('selected', false);
-                    $(this).attr('data-next-stage', "select");
-                    $(this).text("Select All");
-                }
-
-                $('#' + selectallElement).trigger('chosen:updated');
-            });
-
-        $('#StartDate').datepicker();
-        $('#EndDate').datepicker();
-
-        $(document).on("change","#BusinessGroups_Id",function(){
-            $.ajax({
-                type: "POST",
-                url: '/MasterCampaign/LoadBusinessLine',
-                data: $("#frmMasterCampaign").serialize(),
-                success: function(data)
-                {
-                    $("#dvFormMasterCampaign").html(data);
-                }
-            });
-        });
-        $(document).on("change","#Segments_Id",function(){
-            $.ajax({
-                type: "POST",
-                url: '/MasterCampaign/LoadIndustry',
-                data: $("#frmMasterCampaign").serialize(),
-                success: function(data)
-                {
-                    $("#dvFormMasterCampaign").html(data);
-                }
-            });
-        });
-
-        function DdlBind()
-        {
-            var BusinessGroups_Id_ARR=[];
-            $('#BusinessGroups_Id :selected').each(function(i, selected){
-                BusinessGroups_Id_ARR.push($(selected).val());
-            });
-
-            var Segments_Id_ARR=[];
-            if($("#Segments_Id option:selected").val()=="")
-                Segments_Id= $("#Segments_Id option:selected").val();
-            else
-            {
-                $('#Segments_Id :selected').each(function(i, selected){
-                    Segments_Id_ARR.push($(selected).val());
-                });
-            }
-
-            var bgroup_params= '';
-            var Segment_params='';
-
-            if (BusinessGroups_Id_ARR.length> 0 && Segments_Id_ARR.length<=0) {
-                BusinessGroups_Id_ARR.forEach(function(e){bgroup_params = bgroup_params+"BusinessGroups_Id="+e+"&";});
-                window.location.href = '/MasterCampaign/MasterCampaign?'+bgroup_params+Segment_params + '&_=' + (new Date()).getTime();
-            }
-            else if (BusinessGroups_Id_ARR.length> 0 && Segments_Id_ARR.length>0) {
-                BusinessGroups_Id_ARR.forEach(function(e){bgroup_params = bgroup_params+"BusinessGroups_Id="+e+"&";});
-                Segments_Id_ARR.forEach(function(e){Segment_params = Segment_params+"Segments_Id="+e+"&";});
-                window.location.href = '/MasterCampaign/MasterCampaign?'+bgroup_params+Segment_params + '&_=' + (new Date()).getTime();
-            }
-            else
-            {
-                bgroup_params='';
-                Segment_params='';
-                window.location.href = '/MasterCampaign/MasterCampaign?'+bgroup_params+ Segment_params + '&_=' + (new Date()).getTime();
-                //handle for no selection
-            }
-
-        }
-        $('.chosen-single').chosen();
-    });
-
-    function ValidateForm() {
-        var flag = true;
-        if ($('#BusinessGroups_Id').val() == null) {
-
-            $('.validmsgbusinesGp').text("Please select Business Group").css("color", "#b94a48");
-            $('.validmsgbusinesGp').show();
-            flag = false;
-
-        }
-        else {
-            $('.validmsgbusinesGp').hide();
-        }
-
-        if ($('#BusinessLines_Id').val() == null) {
-
-            $('.validmsgbusinesLine').text("Please select Business Line").css("color", "#b94a48");
-            $('.validmsgbusinesLine').show();
-            flag = false;
-
-        }
-        else
-        {
-            $('.validmsgbusinesLine').hide();
-        }
-
-        if ($('#Segments_Id').val() == null) {
-
-            $('.validmsgbusinesSegment').text("Please select Segment").css("color", "#b94a48");
-            $('.validmsgbusinesSegment').show();
-            flag = false;
-
-        }
-        else {
-            $('.validmsgbusinesSegment').hide();
-        }
-
-        if ($('#Industries_Id').val() == null) {
-
-            $('.validmsgbusinesIndustry').text("Please select industry from drop-down").css("color", "#b94a48");
-            $('.validmsgbusinesIndustry').show();
-            flag = false;
-
-        }
-        else {
-            $('.validmsgbusinesIndustry').hide();
-        }
-
-
-        if ($('#Geographys_Id').val() == null) {
-
-            $('.validmsgbusinesGeography').text("Please select geography from drop-down").css("color", "#b94a48");
-            $('.validmsgbusinesGeography').show();
-            flag = false;
-
-        }
-        else
-        {
-            $('.validmsgbusinesGeography').hide();
-        }
-
-
-        if ($("#StartDate").find("input").val() == "") {
-            $('.validmsgSdate').text("Please select Start Date").css("color", "#b94a48");
-            $('.validmsgSdate').show();
-            flag = false;
-
-        }
-        else
-        {
-            $('.validmsgSdate').hide();
-        }
-
-        if ($("#EndDate").find("input").val() == "") {
-            $('.validmsgEdate').text("Please select End Date").css("color", "#b94a48");
-            $('.validmsgEdate').show();
-            flag = false;
-        }
-        else {
-            $('.validmsgEdate').hide();
-        }
-        var startdate = new Date($("#StartDate").find("input").val());
-        var enddate = new Date($("#EndDate").find("input").val());
-        if (startdate > enddate) {
-            $('.validmsgDatecompare').text("End Date can not less than Start Date").css("color", "#b94a48");
-            $('.validmsgDatecompare').show();
-            flag = false;
-        }
-        else {
-            $('.validmsgDatecompare').hide();
-        }
-
-        if ($('#Name').val() == "") {
-            $('.validmsgMaster').text("Please enter Master Campaign Name").css("color", "#b94a48");
-            $('.validmsgMaster').show();
-            flag = false;
-        }
-        else {
-            $('.validmsgMaster').hide();
-        }
-
-        if ($('#CampaignDescription').val() == "") {
-            $('.validmsgMasterDesc').text("Please enter Master Campaign Description").css("color", "#b94a48");
-            $('.validmsgMasterDesc').show();
-            flag = false;
-        }
-        else
-        {
-            $('.validmsgMasterDesc').hide();
-        }
-        //if ($('#Status').val() == "") {
-        //    $('.validmsgstatus').text("Please select Status").css("color", "#b94a48");
-        //    $('.validmsgstatus').show();
-        //    flag = false;
-
-        //}
-        //else {
-
-        //    $('.validmsgstatus').hide();
-        //}
-        return flag;
-    }
-
-
-</script>
