--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -122,8 +122,8 @@
                                 <div class="col-md-6 date datealign">
                                     <div class="input-group input-append date" id="StartDate">
                                         @Html.TextBoxFor(m => m.StartDate, (Model.Id != 0 && Model.Status == "Complete") ?
-                                            (object)new { disabled = "disabled", @class = "form-control", @maxlength = "10" } :
-                                            (object)new { @class = "form-control", @maxlength = "10" })
+                                            (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10" } :
+                                            (object)new { @class = "form-control mrm-cal", @maxlength = "10" })
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                 </div>
@@ -136,8 +136,8 @@
                                 <div class="col-md-6 form-group date datealign">
                                     <div class="input-group input-append date" id="EndDate">
                                         @Html.TextBoxFor(m => m.EndDate, (Model.Id != 0 && Model.Status == "Complete") ?
-                                            (object)new { disabled = "disabled", @class = "form-control", @maxlength = "10" } :
-                                            (object)new { @class = "form-control", @maxlength = "10" })
+                                            (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10" } :
+                                            (object)new { @class = "form-control mrm-cal", @maxlength = "10" })
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                 </div>
@@ -165,16 +165,25 @@
             </div>
             <!--Upper code /.col -->
             <fieldset>
-                <div class="row" style="padding-top:10px">
-                    <div class="col-md-2">
-                        <input type="button" class="btn btn-block btn-primary btn-sm" value="Back" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" />
-                    </div>
+                <div class="row" style="padding-top: 10px">
+                    @if (Model.Status == "")
+                    {
+                        <div class="col-md-2">
+                            <input type="button" class="btn btn-block btn-primary btn-sm" value="Back" onclick="location.href = '@Url.Action("Index", "MasterCampaign")'"/>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="col-md-2">
+                            <input type="button" class="btn btn-block btn-primary btn-sm" value="Back" onclick="location.href = '@Url.Action("MasterList", "MasterList")'"/>
+                        </div>
+                    }
                     <div class="col-md-6"></div>
                     <div class="col-md-4">
                         @if (Model.Status != "Complete")
                         {
-                            <div class="col-md-4">                                
-                                <input type="button" Id="btnSubmit" name="button" value="Submit" class="btn btn-block btn-primary btn-sm" />
+                            <div class="col-md-4">
+                                <input type="button" Id="btnSubmit" name="button" value="Submit" class="btn btn-block btn-primary btn-sm"/>
                             </div>
                             <div class="col-md-4">
                                 <input type="button" Id="btnSaveDraft" name="button" value="Save Draft" class="btn btn-block btn-primary btn-sm"/>
@@ -183,7 +192,7 @@
                         @if (Model.Id != 0 && Model.Status == "Save Draft")
                         {
                             <div class="col-md-4">
-                                <input type="button" Id="btnDelete" name="button" value="Delete Draft" class="btn btn-block btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete?')"  />
+                                <input type="button" Id="btnDelete" name="button" value="Delete Draft" class="btn btn-block btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete?')"/>
                             </div>
                         }
                     </div>
@@ -192,7 +201,5 @@
             </fieldset>
         </div>
     </section>
-
-   
 </form>
 
