--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -1,18 +1,19 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - MRM Campaign</title>
     <script src="~/Scripts/jquery-2.1.3.min.js"></script>
-    <link href="~/Content/datepicker3.css" rel="stylesheet" />
+    <link href="~/Content/datepicker3.css" rel="stylesheet"/>
     <script src="~/Content/bootstrap-datepicker.js"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @*@Scripts.Render("~/bundles/jquery")*@
-
-    <link href="~/Content/Multi-Select/docsupport/prism.css" rel="stylesheet" />
-    <link href="~/Content/Multi-Select/chosen.css" rel="stylesheet" />
+    <link href="~/Content/Multi-Select/docsupport/prism.css" rel="stylesheet"/>
+    <link href="~/Content/Multi-Select/chosen.css" rel="stylesheet"/>
+    <link href="~/Content/MasterStyle.css" rel="stylesheet"/>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -42,13 +43,22 @@
     
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    
+
+
 </body>
 </html>
 <script src="~/Content/Multi-Select/chosen.jquery.js" type="text/javascript"></script>
 <script src="~/Content/Multi-Select/docsupport/init.js"></script>
-
+<link href="~/Content/jquery-ui.css" rel="stylesheet" />
+<script src="~/Content/jquery-ui.min.js"></script>
 <script>
-    $(document).ajaxComplete(function () {
+    $(document).ajaxStart(function() {
+        
+        $("<div id='globalLoader' class='loader'>Loading...!</div>").dialog().show();
+    });
+
+    $(document).ajaxComplete(function() {
         var config = {
             '.chosen-select': {},
             '.chosen-select-deselect': { allow_single_deselect: true },
@@ -60,5 +70,43 @@
         for (var selector in config) {
             $(selector).chosen(config[selector]);
         }
-    });    
+
+        commonUiInitialization();
+        $('#globalLoader').remove();
+    });
+
+    $(document).ready(function() {
+        commonUiInitialization();
+    });
+
+    
+
+    var commonUiInitialization = function () {
+        $('.mrm-cal').each(function () { if ($(this).val() === '06/26/2017') { $(this).val(''); } });
+        $('.chosen-single').chosen();
+        $('.mrm-cal').datepicker({
+            format: 'mm/dd/yyyy'
+        });
+    };
 </script>
+<style>
+    .loader {
+        border: 16px solid #f3f3f3;
+        border-radius: 50%;
+        border-top: 16px solid #3498db;
+        width: 120px;
+        height: 120px;
+        -webkit-animation: spin 2s linear infinite;
+        animation: spin 2s linear infinite;
+    }
+
+    @@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+    }
+
+    @@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+    }
+    </style>
